Begin addressing various histogram mobile bugs, fix mobile map layout issues

--- a/src/scss/_header-mobile.scss
+++ b/src/scss/_header-mobile.scss
@@ -1,3 +1,7 @@
+.header__title-row {
+  height: $header__title-row-mobile--height;
+}
+
 .header__title-row img {
   max-width: 100%;
   height: auto;
