--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -19,6 +19,7 @@ $atlas--width: 67%;
 $atlas--margin-left: 10px;
 
 $header__title-row--height: 70px;
+$header__title-row-mobile--height: 50px;
 $header__menu-row--height: 50px;
 $header--height: $header__title-row--height + $header__menu-row--height;
 $header__title-row--background: $main-blue;
@@ -33,6 +34,7 @@ $panel__top-row--height: 50px;
 // ------------- derived variables ---------------
 
 $sidebar--top: $header__title-row--height + $header__menu-row--height;
+$sidebar-mobile--top: $header__title-row-mobile--height + $header__menu-row--height;
 $atlas--min-left: $sidebar--max-width + $atlas--margin-left;
 
 @mixin panel() {
